# pcs-global-launchpad

./: .cursorignore  .gitignore  .gitmodules  README.md  bitbucket-pipelines.yml  cloudformation-template.yaml  deploy.sh  index.html  package-lock.json  package.json  parameters.json  playwright.config.ts  tailwind.config.js  vite.config.ts
assessment/src/: .flake8  Dockerfile  Dockerfile.report  README.md  pyproject.toml  requirements-report.txt  requirements.txt
assessment/src/api/: config.py  cors_env.py  dependencies.py  lambda_handler.py  main.py  requirements.txt
assessment/src/api/dependencies/: __init__.py  auth.py
assessment/src/api/routers/: __init__.py  assessments.py  bsp_styles.py  (+5 more)
assessment/src/bsp_score_engine/: constants.py  print_route_pdf.py  report_filename.py  score_engine.py  snapshot_html_pdf.py  utils.py
assessment/src/database/: __init__.py  connection.py  models.py
assessment/src/lambdas/: __init__.py  api_handler.py  report_worker.py  score_worker.py
assessment/src/monitoring/: sentry_init.py
assessment/src/services/: __init__.py  assessment_audit.py  assessment_service.py  bsp_style_service.py  option_service.py  print_html_storage.py  question_response_service.py  question_service.py  user_assessment_style_service.py
assessment/src/utils/: __init__.py  assessment_access_context.py  auth_constants.py  client_ip.py  cognito_jwt.py  exceptions.py  logger.py  option_key.py  response_handler.py  subscription_constants.py  subscription_enforcement.py  validators.py
chatbot/infrastructure/: app.py  cdk.context.json  config_loader.py  pyproject.toml  requirements.txt
chatbot/infrastructure/environments/: dev.yaml  prod.yaml  stage.yaml  uat.yaml
chatbot/src/: .dockerignore  .flake8  Dockerfile  Dockerfile.streaming  pyproject.toml  requirements.txt
chatbot/src/app/: config.py  main.py
chatbot/src/shared/: __init__.py  chunking.py  database_utils.py  embeddings.py
(+1662 files in other folders)
