[project]
name = "src"
version = "0.1.0"
description = "Assessment Module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "aws-lambda-powertools==2.31.0",
    "black==24.1.1",
    "boto3==1.34.34",
    "email-validator==2.1.0",
    "fastapi==0.109.0",
    "flake8==7.0.0",
    "httpx==0.26.0",
    "PyJWT==2.8.0",
    "mangum==0.17.0",
    "mypy==1.8.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
    "cryptography>=49.0.0",
]
