[project]
name = "chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "aioboto3>=7.0.0",
    "boto3==1.42.38",
    "botocore==1.42.38",
    "fastapi==0.109.0",
    "httpx>=0.28.1",
    "mangum==0.17.0",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.5.3",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.27.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools>=2.30.0",
    "black>=26.1.0",
    "flake8>=7.3.0",
    "pytest>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
  \.venv
| venv
| build
| dist
| node_modules
| cdk.out
)/
'''

